--- a/src/app/[lang]/components/Nav/style.css
+++ b/src/app/[lang]/components/Nav/style.css
@@ -1,6 +1,6 @@
 .nav {
   position: fixed;
-  background: rgba(34, 181, 115, 0.7);
+  background: var(--green-dark);
   left: 0;
   top: 0;
   width: 100%;
