--- a/src/app/[lang]/globals.css
+++ b/src/app/[lang]/globals.css
@@ -1,4 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
+
+:root {
+  --green-dark: #003E36;
+  --green-light: #22B573;
+}
+
 body {
   padding: 0;
   margin: 0;
