--- a/src/app/[lang]/components/Nav/style.css
+++ b/src/app/[lang]/components/Nav/style.css
@@ -5,7 +5,7 @@
   top: 0;
   width: 100%;
   z-index: 1000;
-  height: 28px;
+  height: var(--top-navbar-height);
   text-align: right;
 }
 .nav .menu-link {
