--- a/src/app/[lang]/components/Map/Legend/style.css
+++ b/src/app/[lang]/components/Map/Legend/style.css
@@ -4,7 +4,7 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: space-between;
 }
 
 .legend-carousel {
