--- a/src/app/[lang]/components/Map/style.css
+++ b/src/app/[lang]/components/Map/style.css
@@ -13,49 +13,6 @@
   width: 100%;
   height: 100%;
 }
-.mapboxgl-popup-content {
-  font-family: "Urbanist", sans-serif;
-  background: #22b573;
-  color: #fff;
-  min-width: 200px;
-  border-radius: 5px;
-  position: relative;
-  min-height: 22px;
-  max-height: 22px;
-}
-.mapboxgl-popup-content table {
-  border-collapse: collapse;
-  position: absolute;
-  top: 8px;
-}
-.mapboxgl-popup-content table td {
-  padding: 0 5px;
-  text-align: right;
-  text-transform: uppercase;
-  font-size: 10px;
-}
-.mapboxgl-popup-content table .number-value {
-  font-size: 14px;
-  line-height: 1;
-}
-.mapboxgl-popup-anchor-bottom .mapboxgl-popup-tip {
-  border-top-color: #22b573;
-}
-.mapboxgl-popup-anchor-top .mapboxgl-popup-tip {
-  border-bottom-color: #22b573;
-}
-.mapboxgl-popup-anchor-right .mapboxgl-popup-tip {
-  border-left-color: #22b573;
-}
-.mapboxgl-popup-anchor-left .mapboxgl-popup-tip {
-  border-right-color: #22b573;
-}
-.mapboxgl-popup-tip {
-  border: 14px solid transparent;
-}
-.mapboxgl-popup-close-button {
-  color: #fff;
-}
 .copy-url {
   color: #fff;
   text-decoration: none;
@@ -96,12 +53,11 @@
   z-index: 1000;
   display: none;
 }
-@media(max-width: 600px) {
+@media (max-width: 600px) {
   .year-dropdown {
-  display: block;
+    display: block;
   }
 }
-
 
 .mapboxgl-canvas {
   background-color: transparent !important;
@@ -109,4 +65,33 @@
 
 .mapboxgl-ctrl-top-right .mapboxgl-ctrl {
   margin: 60px 10px 0 0;
+}
+
+.geocoder-hidden {
+  visibility: hidden;
+}
+
+.geocoder-toggle {
+  position: absolute;
+  top: calc(var(--top-navbar-height) + 10px);
+  right: 10px;
+  z-index: 1000;
+  height: 36px;
+  width: 29px;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  border-radius: 4px;
+  background-color: #fff;
+  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
+}
+
+.geocoder-toggle button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.geocoder-toggle:hover {
+  opacity: 0.9;
 }
