--- a/src/app/[lang]/components/Footer/style.css
+++ b/src/app/[lang]/components/Footer/style.css
@@ -1,25 +1,27 @@
 .footer {
   position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px 0 20px;
   background: #fff;
   left: 0;
   bottom: 0;
-  width: 100%;
-  z-index: 100;
-  height: 35px;
+  right: 0;
+  z-index: 1;
+  height: 32px;
   color: var(--green-dark);
+  font-size: 12px;
 }
-.footer .mode {
-  position: absolute;
-  right: 200px;
-  font-size: 11px;
-  text-transform: uppercase;
-  width: 340px;
-  text-align: center;
-  top: 8px;
-  font-weight: bold;
+
+.footer-units-select {
+  border: none;
+  color: var(--green-dark);
+  font-size: 12px;
 }
+
 @media (max-width: 900px) {
-  .footer .mode {
+  .footer {
     display: none;
   }
 }
