--- a/src/app/[lang]/components/Footer/style.css
+++ b/src/app/[lang]/components/Footer/style.css
@@ -1,49 +1,27 @@
 .footer {
   position: fixed;
-  background: rgba(34, 181, 115, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px 0 20px;
+  background: #fff;
   left: 0;
   bottom: 0;
-  width: 100%;
-  z-index: 100;
-  height: 35px;
-  text-align: center;
-  color: #fff;
+  right: 0;
+  z-index: 1;
+  height: 32px;
+  color: var(--green-dark);
+  font-size: 12px;
 }
-.footer .mode {
-  position: absolute;
-  right: 200px;
-  font-size: 11px;
-  text-transform: uppercase;
-  width: 340px;
-  text-align: center;
-  top: 8px;
-  font-weight: bold;
+
+.footer-units-select {
+  border: none;
+  color: var(--green-dark);
+  font-size: 12px;
 }
-@media(max-width: 900px) {
-  .footer .mode {
+
+@media (max-width: 900px) {
+  .footer {
     display: none;
   }
-}
-.mining-legend {
-  color: #fff;
-  right: 490px;
-  top: 10px;
-  font-size: 11px;
-  position: absolute;
-  text-transform: uppercase;
-}
-@media(max-width: 900px) {
-  .mining-legend {
-    right: 210px;
-  }
-}
-.mine-swatch {
-  display: block;
-  height: 10px;
-  width: 10px;
-  left: -20px;
-  top: 1px;
-  position: absolute;
-  background: rgba(236, 175, 0, 0.7);
-  border: 1px solid #ecaf00;
 }
