Get data from mining calculator

--- a/src/app/[lang]/components/AreaSummary/AreaSummaryFigure/style.module.css
+++ b/src/app/[lang]/components/AreaSummary/AreaSummaryFigure/style.module.css
@@ -15,6 +15,16 @@
 }
 
 .figure {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   font-weight: 700;
   font-size: 32px;
+}
+
+.tooltipButton {
+  border: none;
+  background: transparent;
+  padding: none;
+  cursor: pointer;
 }
