Change area type radio for select, i18n fixes

--- a/src/app/[lang]/components/AreaSummary/AreaSummaryFigure/style.module.css
+++ b/src/app/[lang]/components/AreaSummary/AreaSummaryFigure/style.module.css
@@ -22,6 +22,10 @@
   font-size: 32px;
 }
 
+.figureText {
+  text-transform: capitalize;
+}
+
 .tooltipButton {
   border: none;
   background: transparent;
