--- a/src/app/[lang]/components/AreaSelect/style.css
+++ b/src/app/[lang]/components/AreaSelect/style.css
@@ -89,3 +89,39 @@
   padding: 0 24px;
   text-transform: capitalize;
 }
+
+.area-types-select-box {
+  width: 250px;
+}
+.area-search-select-box {
+  width: 250px;
+}
+
+@media (max-width: 600px) {
+  .area-types-wrapper {
+    position: fixed;
+    text-align: center;
+    top: calc(var(--top-navbar-height) + 10px);
+    right: 50px;
+    z-index: 1000;
+    pointer-events: none; /* allow clicks to pass through */
+  }
+
+  .area-types-container {
+    flex-direction: column;
+    align-items: end;
+    row-gap: 10px;
+  }
+
+  .area-select {
+    margin-left: 0;
+    width: 200px;
+  }
+
+  .area-types-select-box {
+    width: 200px;
+  }
+  .area-search-select-box {
+    width: 200px;
+  }
+}
