--- a/src/app/[lang]/components/AreaSummary/AreaSummaryDetails/style.module.css
+++ b/src/app/[lang]/components/AreaSummary/AreaSummaryDetails/style.module.css
@@ -7,7 +7,7 @@
   border-bottom-left-radius: 12px;
   border-bottom-right-radius: 12px;
   color: var(--green-dark);
-  max-height: 30vh;
+  max-height: 40vh;
   overflow-y: auto;
 }
 
@@ -15,6 +15,8 @@
   .wrapper {
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
+    min-height: 100px;
+    max-height: none;
   }
 }
 
