Fix pointer events on tooltip

--- a/src/app/[lang]/components/Map/MapPopup/style.css
+++ b/src/app/[lang]/components/Map/MapPopup/style.css
@@ -26,6 +26,8 @@
   color: #fff;
 }
 
-.map-tooltip {
-  pointer-events: none;
+.map-tooltip,
+.map-tooltip .mapboxgl-popup-content,
+.map-tooltip .mapboxgl-popup-tip {
+  pointer-events: none !important;
 }
