Change navbar background back to light green

--- a/src/app/[lang]/components/Nav/style.css
+++ b/src/app/[lang]/components/Nav/style.css
@@ -1,6 +1,6 @@
 .nav {
   position: fixed;
-  background: var(--green-dark);
+  background: var(--green-light);
   left: 0;
   top: 0;
   width: 100%;
