--- a/src/app/[lang]/components/AreaSummary/AreaSummaryDetails/style.module.css
+++ b/src/app/[lang]/components/AreaSummary/AreaSummaryDetails/style.module.css
@@ -1,9 +1,8 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  gap: 6px;
   background: #fff;
-  padding: 12px 24px;
+  padding: 12px 24px 18px;
   border-bottom-left-radius: 12px;
   border-bottom-right-radius: 12px;
   color: var(--green-dark);
@@ -25,8 +24,8 @@
   font-size: 14px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  margin-top: 8px;
+  margin-top: 6px;
+  margin-bottom: 2px;
 }
 
 .figure {
@@ -34,7 +33,7 @@
   justify-content: space-between;
   align-items: center;
   font-weight: 700;
-  font-size: 32px;
+  font-size: 24px;
 }
 
 .figureText {
