--- a/src/app/[lang]/components/Map/LegendWrapper/style.css
+++ b/src/app/[lang]/components/Map/LegendWrapper/style.css
@@ -8,6 +8,11 @@
   row-gap: 24px;
 }
 
+.legend-container {
+  display: flex;
+  gap: 24px;
+}
+
 .legend-card {
   background: #ffffffcc;
   border-radius: 12px;
