Filter mining on hover, add illegality tooltips, small fixes

--- a/src/app/[lang]/components/Nav/style.css
+++ b/src/app/[lang]/components/Nav/style.css
@@ -7,6 +7,7 @@
   z-index: 1000;
   height: var(--top-navbar-height);
   text-align: right;
+  font-weight: 500;
 }
 .nav .menu-link {
   color: #fff;
