Add note to IT and PA areas select

--- a/src/app/[lang]/components/AreaSelect/style.css
+++ b/src/app/[lang]/components/AreaSelect/style.css
@@ -125,3 +125,10 @@
     width: 200px;
   }
 }
+
+.area-option-description {
+  font-size: 13px;
+  opacity: 0.8;
+  white-space: normal;
+  word-break: break-word;
+}
