Add illegality breakdown label

--- a/src/app/[lang]/components/AreaSummary/AreaSummaryDetails/style.module.css
+++ b/src/app/[lang]/components/AreaSummary/AreaSummaryDetails/style.module.css
@@ -28,6 +28,12 @@
   margin-bottom: 2px;
 }
 
+.subLabel {
+  font-weight: 500;
+  font-size: 13px;
+  margin-bottom: 6px;
+}
+
 .figure {
   display: flex;
   justify-content: space-between;
