--- a/src/app/[lang]/components/Map/style.css
+++ b/src/app/[lang]/components/Map/style.css
@@ -107,3 +107,27 @@
     visibility: hidden;
   }
 }
+
+.amw-logo {
+  position: fixed;
+  top: 50px;
+  left: 40px;
+  z-index: 1000;
+  display: block;
+}
+@media (max-width: 900px) {
+  .amw-logo {
+    left: 10px;
+    top: 40px;
+  }
+}
+.amw-logo img {
+  width: 170px;
+  height: 100px;
+}
+@media (max-width: 900px) {
+  .amw-logo img {
+    width: 70px;
+    height: 60px;
+  }
+}
