--- a/src/app/[lang]/components/PolicyScoreboard/style.module.css
+++ b/src/app/[lang]/components/PolicyScoreboard/style.module.css
@@ -2,3 +2,8 @@
     border-bottom-color: #fff !important;
     margin-top: 48px;
 }
+
+.footerSection {
+    margin-top: 48px;
+    border-top: 3px solid #fff;
+}
