--- a/src/app/[lang]/components/Intro/style.css
+++ b/src/app/[lang]/components/Intro/style.css
@@ -18,7 +18,6 @@
   .intro {
     width: 80%;
     top: 50%;
-    
   }
 }
 .overlay .content .intro h1 {
@@ -53,4 +52,26 @@
 }
 .intro .btn:hover {
   opacity: 0.6;
+}
+.intro .lang-links {
+  margin-top: 15px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+.intro .lang-link {
+  color: #fff;
+  opacity: 0.7;
+  font-size: 13px;
+  text-decoration: none;
+  letter-spacing: 1px;
+}
+.intro .lang-link:hover {
+  opacity: 1;
+}
+.intro .lang-divider {
+  color: #fff;
+  opacity: 0.4;
+  margin: 0 10px;
+  font-size: 13px;
 }
